<resources>
    <string name="app_name">Strengthen Chemistry</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_select_lesson">Select Lesson</string>
    <string name="btn_account_setting">Account Setting</string>

    <!--tungnt-->
    <string name="btn_chemistry_story">Chuyện vui hóa học</string>
    <string name="class10_lesson">Chuyên đề hóa lớp 10</string>
    <string name="class11_lesson">Chuyên đề hóa lớp 11</string>
    <string name="class12_lesson">Chuyên đề hóa lớp 12</string>
    <string name="lesson_content">Lý thuyết</string>
    <string name="lesson_test">Thực hành</string>
    <string name="lesson_tip">Mẹo</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>

    <!--Chuyên đề hóa lớp 10-->
    <string name="class10_ch1">Nguyên tử</string>
    <string name="class10_ch1_lesson1_1">Thành phần nguyên tử</string>
    <string name="class10_ch1_lesson1_2">Hạt nhân nguyên tử - Nguyên tố hóa học - Đồng vị</string>
    <string name="class10_ch1_lesson1_3">Cấu tạo vỏ nguyên tử</string>
    <string name="class10_ch1_lesson1_4">Cấu hình electron</string>

    <string name="class10_ch2">Liên kết hóa học</string>
    <string name="class10_ch2_lesson2_1">Liên kết ion</string>
    <string name="class10_ch2_lesson2_2">Liên kết cộng hóa trị</string>
    <string name="class10_ch2_lesson2_3">Liên kết kim loại</string>
    <string name="class10_ch2_lesson2_4">Tinh thể và mạng tinh thể</string>
    <string name="class10_ch2_lesson2_5">Sự xen phủ giữa các orbitan nguyên tử</string>

    <string name="class10_ch3">Bảng tuần hoàn các nguyên tố hóa học (NTHH) và Định luật tuần hoàn</string>
    <string name="class10_ch3_lesson3_1">Bảng tuần hoàn các nguyên tố hóa học</string>
    <string name="class10_ch3_lesson3_2">Sự biến đổi tuần hoàn cấu hình electron nguyên tử của các NTHH</string>
    <string name="class10_ch3_lesson3_3">Định luật tuần hoàn - Sự biến đổi tuần hoàn tính chất của các NTHH</string>
    <string name="class10_ch3_lesson3_4">Ý nghĩa của bảng tuần hoàn</string>

    <string name="class10_ch4">Phản ứng oxy hóa - khử</string>
    <string name="class10_ch4_lesson4_1">Phân loại phản ứng trong hóa vô cơ</string>
    <string name="class10_ch4_lesson4_2">Phản ứng oxy hóa - khử</string>
    <string name="class10_ch4_lesson4_3">Định lượng mức độ oxi hóa - khử</string>
    <string name="class10_ch4_lesson4_4">Cân bằng phản ứng oxy hóa - khử </string>
    <string name="class10_ch4_lesson4_5">Phương trình ion thu gọn của phản ứng oxy hóa - khử</string>

    <string name="class10_ch5">Nhóm Halogen</string>
    <string name="class10_ch6">Oxi - Lưu huỳnh</string>
    <string name="class10_ch7">Tốc độ phản ứng và cân bằng hóa học</string>

    <!--Chuyên đề hóa lớp 11-->
    <string name="class11_ch1">Sự điện li</string>
    <string name="class11_ch2">Điện phân dung dịch</string>
    <string name="class11_ch3">Nhóm nitơ</string>
    <string name="class11_ch4">Nhóm cacbon</string>
    <string name="class11_ch5">Đại cương về hóa học hữu cơ</string>
    <string name="class11_ch6">Hiđrocacbon no</string>
    <string name="class11_ch7">Hiđrocacbon không no</string>
    <string name="class11_ch8">Hiđrocacbon thơm - Nguồn hiđrocacbon thiên nhiên</string>
    <string name="class11_ch9">Dẫn xuất Halogen</string>
    <string name="class11_ch10">Ancol - Phenol</string>
    <string name="class11_ch11">Anđehit - Xeton - Axit cacboxylic</string>

    <!--Chuyên đề hóa lớp 12-->
    <string name="class12_ch1">Este - lipit</string>
    <string name="class12_ch2">Cacbohiđrat</string>
    <string name="class12_ch3">Amin - Amino Axit - Protein</string>
    <string name="class12_ch4">Polime và vật liệu Polime</string>
    <string name="class12_ch5">Đại cương về kim loại</string>
    <string name="class12_ch6">Kim loại kiềm, kiềm thổ và nhôm</string>
    <string name="class12_ch7">Crom - Sắt - Đồng và một số kim loại khác</string>
    <string name="class12_ch8">Nhận biết một số chất vô cơ</string>
    <string name="class12_ch9">Hóa học và vấn đề phát triển kinh tế, xã hội, môi trường</string>
</resources>
