<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLessonContent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:text="@string/lesson_content"
        android:background="@drawable/rounded_corner"/>

    <Button
        android:id="@+id/btnLessonTest"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:text="@string/lesson_test"
        android:background="@drawable/rounded_corner"/>

    <Button
        android:id="@+id/btnLessonTip"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:text="@string/lesson_tip"
        android:background="@drawable/rounded_corner"/>

</LinearLayout>